--- a/ThinkWhat/Modules/Controllers/App/Survey/Create/Poll/PollCreationView.xib
+++ b/ThinkWhat/Modules/Controllers/App/Survey/Create/Poll/PollCreationView.xib
@@ -30,8 +30,11 @@
                 <outlet property="optionsView" destination="Bri-bI-ySX" id="Csf-dL-xbl"/>
                 <outlet property="pollChoicesBg" destination="ytE-tJ-2ju" id="qPl-76-85M"/>
                 <outlet property="pollChoicesButton" destination="Lew-ko-BIf" id="vat-h7-6ei"/>
-                <outlet property="pollChoicesContainerView" destination="ZIV-UV-LYa" id="9bV-1u-9xm"/>
+                <outlet property="pollChoicesContainerView" destination="jA8-cr-Hwx" id="UH7-ua-vxW"/>
+                <outlet property="pollChoicesFg" destination="Prg-Re-Nuw" id="zvo-Dm-3Ca"/>
+                <outlet property="pollChoicesSkip" destination="Z6H-BK-bev" id="3lv-BL-foB"/>
                 <outlet property="pollChoicesStaticLabel" destination="sDZ-7W-smK" id="jHo-wz-ghU"/>
+                <outlet property="pollChoicesTemp" destination="HVP-91-ezd" id="pCg-uB-4jM"/>
                 <outlet property="pollChoicesView" destination="T9t-Jx-VNB" id="LaH-Cj-IgN"/>
                 <outlet property="pollDescriptionBg" destination="sf8-wF-YD3" id="gQP-rB-5bh"/>
                 <outlet property="pollDescriptionButton" destination="eD1-TJ-x1z" id="xgn-Bc-Tfw"/>
@@ -44,7 +47,6 @@
                 <outlet property="pollImagesButton" destination="7oT-XB-JmG" id="gUe-Zd-7Fy"/>
                 <outlet property="pollImagesContainerView" destination="LmY-Fe-ZcH" id="2Ke-tW-e0J"/>
                 <outlet property="pollImagesFg" destination="KUi-zY-eg2" id="3Tp-93-Twv"/>
-                <outlet property="pollImagesHeight" destination="YDB-1V-ViU" id="Tvs-SD-pCZ"/>
                 <outlet property="pollImagesSkip" destination="tqp-mz-7hf" id="F0c-PG-CpQ"/>
                 <outlet property="pollImagesStaticLabel" destination="LuK-wg-NiR" id="Qms-pN-tEV"/>
                 <outlet property="pollImagesTemp" destination="GVI-mX-WUB" id="Rkn-1R-lv5"/>
@@ -551,17 +553,55 @@
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ytE-tJ-2ju">
                                     <rect key="frame" x="20.5" y="2683" width="373" height="298.5"/>
                                     <subviews>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZIV-UV-LYa">
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Prg-Re-Nuw">
                                             <rect key="frame" x="0.0" y="0.0" width="373" height="298.5"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jA8-cr-Hwx">
+                                                    <rect key="frame" x="0.0" y="0.0" width="373" height="246.5"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </view>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HVP-91-ezd">
+                                                    <rect key="frame" x="0.0" y="246.5" width="373" height="52"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrow.down.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Z6H-BK-bev">
+                                                            <rect key="frame" x="165.5" y="5.5" width="42" height="41"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" secondItem="Z6H-BK-bev" secondAttribute="height" multiplier="1:1" id="Exq-1l-X38"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                    </subviews>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstItem="Z6H-BK-bev" firstAttribute="height" secondItem="HVP-91-ezd" secondAttribute="height" multiplier="0.807692" id="8wR-QA-Crt"/>
+                                                        <constraint firstItem="Z6H-BK-bev" firstAttribute="centerY" secondItem="HVP-91-ezd" secondAttribute="centerY" id="B0i-GQ-ltX"/>
+                                                        <constraint firstItem="Z6H-BK-bev" firstAttribute="centerX" secondItem="HVP-91-ezd" secondAttribute="centerX" id="FAb-Mx-WYC"/>
+                                                        <constraint firstAttribute="height" constant="52" identifier="supp_height" id="vnM-aE-0nc"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="HVP-91-ezd" secondAttribute="bottom" id="0RG-4k-n56"/>
+                                                <constraint firstAttribute="trailing" secondItem="HVP-91-ezd" secondAttribute="trailing" id="6xV-1b-Gss"/>
+                                                <constraint firstItem="jA8-cr-Hwx" firstAttribute="top" secondItem="Prg-Re-Nuw" secondAttribute="top" id="6yL-R3-t9o"/>
+                                                <constraint firstItem="HVP-91-ezd" firstAttribute="leading" secondItem="Prg-Re-Nuw" secondAttribute="leading" id="Enb-0P-bxO"/>
+                                                <constraint firstItem="HVP-91-ezd" firstAttribute="top" secondItem="jA8-cr-Hwx" secondAttribute="bottom" id="HLi-qi-e20"/>
+                                                <constraint firstItem="jA8-cr-Hwx" firstAttribute="top" secondItem="Prg-Re-Nuw" secondAttribute="top" id="PP5-R5-MAM"/>
+                                                <constraint firstAttribute="trailing" secondItem="jA8-cr-Hwx" secondAttribute="trailing" id="TyY-Mf-H2m"/>
+                                                <constraint firstItem="jA8-cr-Hwx" firstAttribute="bottom" secondItem="HVP-91-ezd" secondAttribute="top" priority="999" id="ft5-af-c42"/>
+                                                <constraint firstAttribute="trailing" secondItem="jA8-cr-Hwx" secondAttribute="trailing" id="o9h-vB-uqS"/>
+                                                <constraint firstItem="jA8-cr-Hwx" firstAttribute="leading" secondItem="Prg-Re-Nuw" secondAttribute="leading" id="qDf-nz-sCH"/>
+                                                <constraint firstItem="jA8-cr-Hwx" firstAttribute="leading" secondItem="Prg-Re-Nuw" secondAttribute="leading" id="tCs-Bc-BaV"/>
+                                            </constraints>
                                         </view>
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
-                                        <constraint firstAttribute="trailing" secondItem="ZIV-UV-LYa" secondAttribute="trailing" id="Qp7-nx-r69"/>
-                                        <constraint firstItem="ZIV-UV-LYa" firstAttribute="top" secondItem="ytE-tJ-2ju" secondAttribute="top" id="Yho-XO-3FF"/>
-                                        <constraint firstItem="ZIV-UV-LYa" firstAttribute="leading" secondItem="ytE-tJ-2ju" secondAttribute="leading" id="nsl-59-m76"/>
-                                        <constraint firstAttribute="bottom" secondItem="ZIV-UV-LYa" secondAttribute="bottom" id="xHa-7j-2Yl"/>
+                                        <constraint firstItem="Prg-Re-Nuw" firstAttribute="leading" secondItem="ytE-tJ-2ju" secondAttribute="leading" id="FKP-fy-upS"/>
+                                        <constraint firstItem="Prg-Re-Nuw" firstAttribute="top" secondItem="ytE-tJ-2ju" secondAttribute="top" id="NRp-IZ-YdK"/>
+                                        <constraint firstAttribute="trailing" secondItem="Prg-Re-Nuw" secondAttribute="trailing" id="b4z-KS-Sfw"/>
+                                        <constraint firstAttribute="height" constant="298.5" id="eXs-we-FJG"/>
+                                        <constraint firstAttribute="bottom" secondItem="Prg-Re-Nuw" secondAttribute="bottom" id="tB0-H0-8Ax"/>
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fZx-i9-X4y">
@@ -607,16 +647,16 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BMp-4f-H88">
-                                    <rect key="frame" x="124" y="3267" width="166" height="165.5"/>
+                                    <rect key="frame" x="124" y="3267" width="166" height="166"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CHk-sT-gZX" customClass="ArcLabel" customModule="ThinkWhat" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="0.0" width="166" height="165.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="166" height="166"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eav-Do-gNr" customClass="ArcLabel" customModule="ThinkWhat" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="0.0" width="166" height="165.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="166" height="166"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -628,7 +668,7 @@
                                             </userDefinedRuntimeAttributes>
                                         </label>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KS0-hu-t89" customClass="CircleButton" customModule="ThinkWhat" customModuleProvider="target">
-                                            <rect key="frame" x="29" y="29" width="108" height="107.5"/>
+                                            <rect key="frame" x="29" y="29" width="108" height="108"/>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="KS0-hu-t89" secondAttribute="height" multiplier="1:1" id="Spy-D7-rAN"/>
@@ -652,16 +692,16 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ApG-tU-UvF">
-                                    <rect key="frame" x="124" y="3492.5" width="166" height="166"/>
+                                    <rect key="frame" x="124" y="3493" width="166" height="165.5"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TTz-Fj-Hy0" customClass="ArcLabel" customModule="ThinkWhat" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="0.0" width="166" height="166"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="166" height="165.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fzQ-9l-9Fa" customClass="ArcLabel" customModule="ThinkWhat" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="0.0" width="166" height="166"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="166" height="165.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -673,7 +713,7 @@
                                             </userDefinedRuntimeAttributes>
                                         </label>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QmI-tE-6ep" customClass="CircleButton" customModule="ThinkWhat" customModuleProvider="target">
-                                            <rect key="frame" x="29" y="29" width="108" height="108"/>
+                                            <rect key="frame" x="29" y="29" width="108" height="107.5"/>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="QmI-tE-6ep" secondAttribute="height" multiplier="1:1" id="MW2-0c-snI"/>
@@ -698,7 +738,6 @@
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
-                                <constraint firstItem="ytE-tJ-2ju" firstAttribute="width" secondItem="ytE-tJ-2ju" secondAttribute="height" multiplier="10:8" id="35H-Mv-884"/>
                                 <constraint firstItem="QDQ-e4-GpO" firstAttribute="width" secondItem="VRA-b6-zQH" secondAttribute="width" id="50I-IO-dIS"/>
                                 <constraint firstItem="Ypb-aX-MKU" firstAttribute="top" secondItem="sf8-wF-YD3" secondAttribute="bottom" constant="60" id="5ao-8o-c5E"/>
                                 <constraint firstItem="T9t-Jx-VNB" firstAttribute="top" secondItem="Oya-vv-a9d" secondAttribute="bottom" constant="60" id="6PC-29-DaV"/>
