--- a/ThinkWhat/Modules/UI/Popup & Banner/Content/SideApp/SideApp.xib
+++ b/ThinkWhat/Modules/UI/Popup & Banner/Content/SideApp/SideApp.xib
@@ -27,71 +27,76 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="rwK-Cz-6AO">
-            <rect key="frame" x="0.0" y="0.0" width="300" height="120"/>
+            <rect key="frame" x="0.0" y="0.0" width="400" height="150"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TwX-CX-YvI">
-                    <rect key="frame" x="0.0" y="0.0" width="300" height="120"/>
+                    <rect key="frame" x="0.0" y="0.0" width="400" height="150"/>
                     <subviews>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e6o-Xm-dVA">
-                            <rect key="frame" x="0.0" y="33" width="54" height="54"/>
-                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <constraints>
-                                <constraint firstAttribute="width" secondItem="e6o-Xm-dVA" secondAttribute="height" multiplier="1:1" id="0OV-ay-4lJ"/>
-                            </constraints>
-                        </view>
-                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="CCB-87-rH8">
-                            <rect key="frame" x="62" y="2" width="238" height="116"/>
+                        <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="EdL-AU-IFs">
+                            <rect key="frame" x="20" y="19" width="360" height="112.5"/>
                             <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BCB-Pp-tiK">
-                                    <rect key="frame" x="0.0" y="0.0" width="145" height="38.5"/>
-                                    <fontDescription key="fontDescription" name="OpenSans" family="Open Sans" pointSize="14"/>
-                                    <state key="normal" title="Воспроизвести здесь">
-                                        <color key="titleColor" systemColor="systemBlueColor"/>
-                                    </state>
-                                    <connections>
-                                        <action selector="playEmbedded:" destination="-1" eventType="touchUpInside" id="5dp-JI-4VT"/>
-                                    </connections>
-                                </button>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IMP-lh-sOt">
-                                    <rect key="frame" x="0.0" y="38.5" width="219" height="39"/>
-                                    <fontDescription key="fontDescription" name="OpenSans" family="Open Sans" pointSize="14"/>
-                                    <state key="normal" title="Открыть в приложении Youtube">
-                                        <color key="titleColor" systemColor="systemBlueColor"/>
-                                    </state>
-                                    <connections>
-                                        <action selector="openYoutubeApp:" destination="-1" eventType="touchUpInside" id="pyE-hG-12w"/>
-                                    </connections>
-                                </button>
-                                <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="iwV-ub-H30">
-                                    <rect key="frame" x="0.0" y="77.5" width="133" height="38.5"/>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e6o-Xm-dVA">
+                                    <rect key="frame" x="0.0" y="0.0" width="112.5" height="112.5"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" secondItem="e6o-Xm-dVA" secondAttribute="height" multiplier="1:1" id="0OV-ay-4lJ"/>
+                                    </constraints>
+                                </view>
+                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="CCB-87-rH8">
+                                    <rect key="frame" x="120.5" y="8" width="239.5" height="96"/>
                                     <subviews>
-                                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="g34-uo-fYc">
-                                            <rect key="frame" x="0.0" y="0.0" width="51" height="38.5"/>
-                                            <connections>
-                                                <action selector="onChange:" destination="-1" eventType="valueChanged" id="DDM-wS-d2R"/>
-                                            </connections>
-                                        </switch>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Запомнить" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dL7-NL-jah">
-                                            <rect key="frame" x="57" y="0.0" width="76" height="38.5"/>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BCB-Pp-tiK">
+                                            <rect key="frame" x="0.0" y="0.0" width="145" height="32"/>
                                             <fontDescription key="fontDescription" name="OpenSans" family="Open Sans" pointSize="14"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
+                                            <state key="normal" title="Воспроизвести здесь">
+                                                <color key="titleColor" systemColor="systemBlueColor"/>
+                                            </state>
+                                            <connections>
+                                                <action selector="playEmbedded:" destination="-1" eventType="touchUpInside" id="5dp-JI-4VT"/>
+                                            </connections>
+                                        </button>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IMP-lh-sOt">
+                                            <rect key="frame" x="0.0" y="32" width="219" height="32"/>
+                                            <fontDescription key="fontDescription" name="OpenSans" family="Open Sans" pointSize="14"/>
+                                            <state key="normal" title="Открыть в приложении Youtube">
+                                                <color key="titleColor" systemColor="systemBlueColor"/>
+                                            </state>
+                                            <connections>
+                                                <action selector="openYoutubeApp:" destination="-1" eventType="touchUpInside" id="pyE-hG-12w"/>
+                                            </connections>
+                                        </button>
+                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="iwV-ub-H30">
+                                            <rect key="frame" x="0.0" y="64" width="133" height="32"/>
+                                            <subviews>
+                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="g34-uo-fYc">
+                                                    <rect key="frame" x="0.0" y="0.0" width="51" height="32"/>
+                                                    <connections>
+                                                        <action selector="onChange:" destination="-1" eventType="valueChanged" id="DDM-wS-d2R"/>
+                                                    </connections>
+                                                </switch>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Запомнить" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dL7-NL-jah">
+                                                    <rect key="frame" x="57" y="0.0" width="76" height="32"/>
+                                                    <fontDescription key="fontDescription" name="OpenSans" family="Open Sans" pointSize="14"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </stackView>
                                     </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </stackView>
                             </subviews>
-                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstItem="e6o-Xm-dVA" firstAttribute="height" secondItem="EdL-AU-IFs" secondAttribute="height" id="IlN-Bl-dje"/>
+                            </constraints>
                         </stackView>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstItem="CCB-87-rH8" firstAttribute="top" secondItem="TwX-CX-YvI" secondAttribute="top" constant="2" id="3Op-Q5-LBQ"/>
-                        <constraint firstItem="e6o-Xm-dVA" firstAttribute="height" secondItem="TwX-CX-YvI" secondAttribute="height" multiplier="0.45" id="4Cd-Tc-wgd"/>
-                        <constraint firstItem="e6o-Xm-dVA" firstAttribute="centerY" secondItem="TwX-CX-YvI" secondAttribute="centerY" id="Frp-1d-4R5"/>
-                        <constraint firstItem="CCB-87-rH8" firstAttribute="leading" secondItem="e6o-Xm-dVA" secondAttribute="trailing" constant="8" id="SN6-gI-aOk"/>
-                        <constraint firstAttribute="bottom" secondItem="CCB-87-rH8" secondAttribute="bottom" constant="2" id="TLu-Le-HIV"/>
-                        <constraint firstAttribute="trailing" secondItem="CCB-87-rH8" secondAttribute="trailing" id="mZt-9u-5Dg"/>
-                        <constraint firstItem="e6o-Xm-dVA" firstAttribute="leading" secondItem="TwX-CX-YvI" secondAttribute="leading" id="vi2-uu-UeI"/>
+                        <constraint firstItem="EdL-AU-IFs" firstAttribute="centerX" secondItem="TwX-CX-YvI" secondAttribute="centerX" id="90t-UJ-9V9"/>
+                        <constraint firstItem="EdL-AU-IFs" firstAttribute="height" secondItem="TwX-CX-YvI" secondAttribute="height" multiplier="0.75" id="Q54-2O-Ufn"/>
+                        <constraint firstItem="EdL-AU-IFs" firstAttribute="width" secondItem="TwX-CX-YvI" secondAttribute="width" multiplier="0.9" id="aE3-DW-mDW"/>
+                        <constraint firstItem="EdL-AU-IFs" firstAttribute="centerY" secondItem="TwX-CX-YvI" secondAttribute="centerY" id="rRa-KS-ksa"/>
                     </constraints>
                 </view>
             </subviews>
